<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.GridLayout
        android:layout_width="333dp"
        android:layout_height="88dp"
        android:layout_marginBottom="494dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/editText"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/axis" />

        <TextView
            android:id="@+id/editText2"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:ems="10"
            android:text="@string/accelerometer"
            app:layout_column="1"
            app:layout_row="0" />

        <TextView
            android:id="@+id/editText3"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:ems="10"
            android:text="@string/gyroscope"
            app:layout_column="2"
            app:layout_row="0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/x"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/y"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/z"
            app:layout_column="0"
            app:layout_row="3" />

        <TextView
            android:id="@+id/AccX"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/AccX"
            app:layout_column="1"
            app:layout_row="1" />

        <TextView
            android:id="@+id/AccY"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/AccY"
            app:layout_column="1"
            app:layout_row="2" />

        <TextView
            android:id="@+id/AccZ"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/AccZ"
            app:layout_column="1"
            app:layout_row="3" />

        <TextView
            android:id="@+id/GyroX"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/GyroX"
            app:layout_column="2"
            app:layout_row="1" />

        <TextView
            android:id="@+id/GyroY"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/GyroY"
            app:layout_column="2"
            app:layout_row="2" />

        <TextView
            android:id="@+id/GyroZ"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/GyroZ"
            app:layout_column="2"
            app:layout_row="3" />
    </android.support.v7.widget.GridLayout>

</android.support.constraint.ConstraintLayout>